--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.47.2",
+    "best-saas-kit-pro": "file:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
@@ -32,8 +33,8 @@
   },
   "devDependencies": {
     "@types/node": "20.10.0",
-    "@types/react": "18.2.39",
-    "@types/react-dom": "18.2.17",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "autoprefixer": "10.4.16",
