--- a/package.json
+++ b/package.json
@@ -10,28 +10,37 @@
   },
   "dependencies": {
     "@heroicons/react": "2.0.18",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-email/components": "^0.0.31",
     "@react-email/render": "^1.0.3",
     "@stripe/stripe-js": "^5.2.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/supabase-js": "^2.47.2",
+    "@supabase/supabase-js": "^2.47.10",
     "best-saas-kit-pro": "file:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
     "openai": "^4.76.1",
     "react": "18.2.0",
+    "react-day-picker": "^9.4.4",
     "react-dom": "18.2.0",
     "react-email": "^3.0.4",
     "recharts": "^2.12.0",
     "resend": "^4.0.1",
+    "shadcn-ui": "^0.9.4",
     "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "@types/node": "20.10.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
@@ -41,6 +50,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.1.0",
     "postcss": "8.4.31",
+    "supabase": "^2.1.1",
     "tailwindcss": "3.3.5",
     "typescript": "5.3.2"
   }
