--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "best-saas-kit-pro": "file:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "daisyui": "^4.12.22",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
@@ -37,13 +38,11 @@
     "react-email": "^3.0.4",
     "recharts": "^2.12.0",
     "resend": "^4.0.1",
-    "shadcn-ui": "^0.9.4",
     "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.5",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "@shadcn/ui": "^0.0.4",
     "@types/node": "20.10.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
