--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-day-picker": "^9.4.4",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.3.5",
     "react-email": "^3.0.4",
     "recharts": "^2.12.0",
     "resend": "^4.0.1",
