--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "clsx": "^2.1.1",
     "daisyui": "^4.12.22",
     "date-fns": "^4.1.0",
+    "docx": "^9.1.0",
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
     "openai": "^4.76.1",
+    "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-day-picker": "^9.4.4",
     "react-dom": "18.2.0",
@@ -47,6 +49,7 @@
   },
   "devDependencies": {
     "@types/node": "20.10.0",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
