--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^4.1.0",
     "docx": "^9.1.0",
     "lucide-react": "^0.468.0",
+    "mammoth": "^1.9.0",
     "next": "^15.1.0",
     "openai": "^4.76.1",
     "pdf-parse": "^1.1.1",
