--- a/.api/apis/eden-ai/package.json
+++ b/.api/apis/eden-ai/package.json
@@ -4,6 +4,7 @@
   "main": "./index.ts",
   "types": "./index.d.ts",
   "dependencies": {
+    "@api/eden-ai": "file:",
     "api": "^6.1.2",
     "json-schema-to-ts": "^2.8.0-beta.0",
     "oas": "^20.10.3"
